# flutter-gstreamer

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/gst_mobile_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: gst_mobile.podspec
ios/Classes/: gst_mobile.c
lib/: gst_mobile.dart  gst_mobile_bindings_generated.dart
src/: CMakeLists.txt  gst_mobile.c  gst_mobile.h
